--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 <ul class="category recent-posts">
   <h3 class="category-title">Recent Posts</h3>
 
-  {% for post in site.posts limit:5 %}
+  {%- for post in site.posts limit:5 -%}
   <li>
     <div class="article">
     <article class="article" itemscope itemtype="http://schema.org/BlogPosting">
@@ -21,20 +21,20 @@ layout: default
     </article>
     </div>
   </li>
-  {% endfor %}
+  {%- endfor -%}
 </ul>
 
-{% assign sorted_cats = site.categories | sort %}
-{% for category in sorted_cats %}
-{% assign sorted_posts = category[1] | reversed %}
+{%- assign sorted_cats = site.categories | sort -%}
+{%- for category in sorted_cats -%}
+{%- assign sorted_posts = category[1] | reversed -%}
 
 <ul class="category {{ category[0] | uri_escape | downcase | slugify }}">
   <h3 id="{{ category[0] | uri_escape | downcase | slugify }}"
       class="category-title">
     {{ category[0] | camelcase }}
   </h3>
-  {% for post in sorted_posts %}
-  {% unless post.draft %}
+  {%- for post in sorted_posts -%}
+  {%- unless post.draft -%}
   <li>
     <div class="article">
     <article class="article" itemscope itemtype="http://schema.org/BlogPosting">
@@ -48,9 +48,9 @@ layout: default
     </article>
     </div>
   </li>
-  {% endunless %}
-  {% endfor %}
+  {%- endunless -%}
+  {%- endfor -%}
 </ul>
-{% endfor %}
+{%- endfor -%}
 
 </div><!-- end #content -->
