--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 <ul class="category recent-posts">
   <h3 class="category-title">Recent Posts</h3>
 
-  {%- for post in site.posts limit:5 -%}
+  {%- for post in site.posts limit:5 %}
   <li>
     <div class="article">
     <article class="article" itemscope itemtype="http://schema.org/BlogPosting">
@@ -20,17 +20,17 @@ layout: default
     </article>
     </div>
   </li>
-  {%- endfor -%}
+  {%- endfor %}
 </ul>
 
-{%- assign sorted_cats = site.categories | sort -%}
-{%- for category in sorted_cats -%}
-{%- assign sorted_posts = category[1] | reversed -%}
+{%- assign sorted_cats = site.categories | sort %}
+{%- for category in sorted_cats %}
+{%- assign sorted_posts = category[1] | reversed %}
 <ul class="category {{ category[0] | uri_escape | downcase | slugify }}">
   <h3 id="{{ category[0] | uri_escape | downcase | slugify }}" class="category-title">{{ category[0] | camelcase }}</h3>
 
-  {%- for post in sorted_posts -%}
-  {%- unless post.draft -%}
+  {%- for post in sorted_posts %}
+  {%- unless post.draft %}
   <li>
     <div class="article">
     <article class="article" itemscope itemtype="http://schema.org/BlogPosting">
@@ -43,25 +43,25 @@ layout: default
     </article>
     </div>
   </li>
-  {%- endunless -%}
-  {%- endfor -%}
+  {%- endunless %}
+  {%- endfor %}
 </ul>
-{%- endfor -%}
+{%- endfor %}
 
 </div><!-- end #content -->
 
 
 <nav class="toppage-nav"><!-- begin Navbar sidebar -->
   <ul>
-    {%- assign sorted_cats = site.categories | sort -%}
-    {%- for category in sorted_cats -%}
+    {%- assign sorted_cats = site.categories | sort %}
+    {%- for category in sorted_cats %}
     <li class="toppage-navli">
       <a href="#{{ category[0] | uri_escape | downcase | slugify }}">
         <span class="nav-dot"></span>
         <span class="nav-label" data-target="{{ category[0] | uri_escape | downcase | slugify }}">{{ category[0] | camelcase }}</span>
       </a>
     </li>
-    {%- endfor -%}
+    {%- endfor %}
   </ul>
 </nav><!-- end Navbar sidebar -->
 
