--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ layout: default
   <h3 class="category-title">Recent Posts</h3>
 
   {%- for post in site.posts limit:10 %}
+  {%- unless post.draft %}
   <li>
     <div class="article">
     <article class="article" itemscope itemtype="http://schema.org/BlogPosting">
@@ -20,6 +21,7 @@ layout: default
     </article>
     </div>
   </li>
+  {%- endunless %}
   {%- endfor %}
 </ul>
 
